<resources>
    <string name="app_name">Composition</string>
    <string name="title">Состав числа</string>
    <string name="rules">Правила игры: перед вами будут три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число. \n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому-что 4+3=7.</string>
    <string name="understand">Понятно</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="medium_level">Средний</string>
    <string name="hard_level">Тяжёлый</string>
    <string name="question">"?"</string>
    <string name="percent_right_count">Процент правильных ответов: %s</string>
    <string name="right_answers">Правильных ответов %s(минимум %s)</string>
    <string name="right_answer_count">Необходимое количество правильных ответов %s</string>
    <string name="count">Ваш счёт: %s</string>
    <string name="count_aswers_percent">Необходимый процент правильных ответов: %s</string>
</resources>